Add views for showing one or all books, Tweak other views

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -486,6 +486,11 @@ div.div-row {
     flex-wrap: wrap;
 }
 
+.book-container {
+    justify-content: center;
+    align-items: center;
+}
+
 .book {
     display: flex;
     flex-direction: column;
