--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -498,7 +498,18 @@ div.div-row {
     align-items: center;
     margin: 12px;
     width: 200px;
-    height: 400px;
+    height: 410px;
+    overflow: hidden;
+}
+
+.book-large {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 12px;
+    width: 100%;
+    height: 410px;
     overflow: hidden;
 }
 
@@ -507,9 +518,18 @@ div.div-row {
     height: 300px;
     margin: 0px;
 }
-
-.book p {
+.book img,
+.book-large img {
+    width: 200px;
+    height: 300px;
     margin: 0px;
+}
+
+.book p,
+.book-large p {
+    margin: 0px;
+    overflow: hidden;
+    text-wrap: nowrap;
 }
 
 figcaption p {
@@ -610,6 +630,7 @@ height: 96px;
 margin-top: 48px;
 margin-bottom: 48px;
 clear: both;
+overflow: hidden;
 }
 .byline-image {
 filter: grayscale(100%);
