Edit metrics text, Edit cardhand comment

--- a/templates/metrics/metrics.html.twig
+++ b/templates/metrics/metrics.html.twig
@@ -78,7 +78,7 @@
             <img src="{{ asset('img/scrutinizer.jpg') }}" alt="scrutinizer">
             <p>Scrutinizer visar även vilka metoder som har sämst "rating", detta kan ge oss en ledtråd att vi ska fokusera närmre på just de metoderna och försöka göra de mindre komplexa.</p>
             <img src="{{ asset('img/worstbeforescrut.jpg') }}" alt="worst class scrutinizer">
-            <p>Alltid verkar ju frid och fröjd när vi tittar övergripligt på scrutinizer men dyker vi närmre så finns där alltid saker att förbättra, som att göra vissa metoder mindre komplexa, 
+            <p>Allt verkar ju frid och fröjd när vi tittar övergripligt på scrutinizer men dyker vi närmre så finns där alltid saker att förbättra, som att göra vissa metoder mindre komplexa, 
             ändra docblock-kommentarer som scrutinizer inte förstår, ta bort död eller överflödig kod. Allt detta finns fortfarande att göra i en kodbas som scrutinizer i övrigt ger ett högt betyg.</p>
                 <div class="div-row">
                     <a href="https://scrutinizer-ci.com/g/PatrikArvius/MVC/">
@@ -97,14 +97,14 @@
             förståelse för hur dessa mätverktyg fungerar.</p>
             <p>1. Öka min coverage, dvs att skriva mer enhetstester och testa större delar av min kodbas. Jag tänker att det torde vara ett relativt enkelt sätt att öka mätvärdena, dessutom 
             tänker jag försöka att inte enbart skriva tester för otestad kod utan jag vill dessutom skriva fler testfall till kod jag redan testat för att se om det får någon effekt på värdena. Det innebär 
-            förståss potentiellt att själva täckningssiffran kanske inte går upp nämnvärt men det blir intressant att se.</p>
+            förstås potentiellt att själva täckningssiffran kanske inte går upp nämnvärt men det blir intressant att se.</p>
             <p>2. Fixa issues och violations som phpmetrics rapporterat. En sak som dyker upp i phpmetrics är bland annat att en klass är "probably bugged", går 
             det att få bort detta med fler tester?</p>
-            <p>3. Scrutinizer och phpstan verkar ha lite olika åsikter när det kommer till docblocks, kan jag skriva om dem så att de båda verktygen blir glada och mina värden går upp? Hur viktigt 
+            <p>3. Scrutinizer och phpstan verkar ha lite olika åsikter när det kommer till docblock kommentarer, kan jag skriva om dem så att de båda verktygen blir glada och mina värden går upp? Hur viktigt 
             är det att lösa just sådana issues? Det får jag återkomma till i diskussionen.</p>
             <p>4. Minska komplexitet. Kan jag bryta ut delar av metoder eller skriva om saker så att de blir mindre komplexa och på så sätt nå bättre värden?</p>
             <p>5. Skriva fler kommentarer, ibland hör man att bra kod är så lätt att läsa att det inte behövs några kommentarer men hur ser phpmetrics på det? Jag ska testa att lägga till 
-            fler kommentarer där det känns som att de kan bidra med förtydling så får vi se vilken effekt det får.</p>
+            fler kommentarer där det känns som att de kan bidra med förtydligande av koden så får vi se vilken effekt det får.</p>
             <h2 id="Resultat">Resultat</h2>
             <p><b>Före:</b></p>
             <p>Avg LCOM: 1.68, Avg cyclomatic complexity: 4.44, Avg bugs: 0.15, Avg defects: 0.45</p>
